--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "vue-tsc": "^2.2.4"
     },
     "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/vue3": "^2.0.0-beta.3",
         "@tanstack/vue-table": "^8.21.2",
         "@vee-validate/zod": "^4.15.0",
